[package]
name = "peasy-pdf"
version = "0.1.1"
edition = "2021"
authors = ["PeasyTools"]
description = "PDF manipulation library for Rust — merge, split, compress, rotate, and watermark PDF files. Built on lopdf for pure-Rust PDF processing."
license = "MIT"
repository = "https://github.com/peasytools/peasy-pdf-rs"
homepage = "https://peasypdf.com"
documentation = "https://docs.rs/peasy-pdf"
readme = "README.md"
keywords = ["pdf", "merge", "split", "compress", "watermark"]
categories = ["command-line-utilities", "text-processing"]

exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
lopdf = "0.36"
thiserror = "2"
